@@ -64,7 +64,9 @@ Package org.springframework.osgi.util
 
 Package org.springframework.osgi.test
 * removed usage of PackageAdmin for resolving bundles
-* improved testing behaviour so that user-defined properties override the system declared ones
+* improved testing behaviour so that user-defined properties override the platform default ones
+* deprecated #getPlatformProperties() from existing platforms classes as it was confusing
+
 
 Package org.springframework.osgi.web
 * improved namespace detection strategy for OsgiBundleXmlWebApplicationContext
